trying to stop text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: rgb(208, 233, 240);
     margin-top: 20px;
     font-family: "Poppins", sans-serif;
-    height: "100000px";
+    /* height: "100000px"; */
 }
 
 a {
@@ -54,7 +54,7 @@ section {
 /* ABOUT SECTION */
 #about {
     justify-content: center;
-    height: 80vh;
+    min-height: 80vh;
 }
 
 /* PROFILE ICON */
@@ -137,7 +137,7 @@ section {
 /* PROJECTS SECTION */
 #projects {
     justify-content: center;
-    height: 80vh;
+    min-height: 80vh;
 }
 
 .projects-item {
